--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
             margin-top: "100px";
             margin-left: auto;
             margin-right: auto;
-            background-color: darksalmon;
+            background-color: darksalmon;}
+        div{
+            text-align: center;
         }
     </style>
+    
 </head>
 <body>
     <div>
