--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Self</title>
     <style>
-        div{
+        div {
             width: "800px";
             margin-top: "100px";
             margin-left: auto;
             margin-right: auto;
-            background-color: darksalmon;}
-        div{
+            background-color: darksalmon;
+        }
+        
+        div {
             text-align: center;
         }
     </style>
